Added weather kamon

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="dns-prefetch" href="https://twitter.com">
     <link rel="dns-prefetch" href="https://mail.google.com">
     <link rel="dns-prefetch" href="https://drive.google.com">
+    <link rel="dns-prefetch" href="https://api.weather.gov">
 
     <link rel="preconnect" href="https://claude.ai" crossorigin>
     <link rel="preconnect" href="https://aistudio.google.com" crossorigin>
@@ -20,6 +21,7 @@
     <link rel="preconnect" href="https://twitter.com" crossorigin>
     <link rel="preconnect" href="https://mail.google.com" crossorigin>
     <link rel="preconnect" href="https://drive.google.com" crossorigin>
+    <link rel="preconnect" href="https://api.weather.gov" crossorigin>
 
     <!-- Speculation Rules API for prerendering (Chrome/Edge) -->
     <script type="speculationrules">
